--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ __pycache__/
 # Generated output
 output/
 /web/data/
-!/web/data/phonetics.json
+!/web/data/tts_rules.json
 
 # Build artifacts
 build/
