--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,14 @@ node_modules/
 
 .env
 
+# Audio files (Locally available for build, but not in git source)
+web/public/data/audio/
+web/data/audio/
+*.mp3
+
+# Python cache
+__pycache__/
+
 # Python cache
 __pycache__/
 *.py[cod]
