refactor: rename frontend data folder to app-content to avoid .gitignore conflict with backend data folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# OS metadata
+.DS_Store
+
 # Virtual Environments
 .venv/
 env/
@@ -6,28 +9,17 @@ node_modules/
 
 .env
 
-# Audio files (Chỉ ignore ở source, không ignore ở dist)
-/web/public/data/audio/
-/web/data/audio/
-/data/audio/
-# Thay vì *.mp3 chung chung, ta chỉ ignore ở các folder source
-/web/public/data/audio/*.mp3
-/web/data/audio/*.mp3
+# Frontend Assets (Ignore audio source to save repo space)
+/web/public/app-content/audio/
+/web/public/app-content/audio/*.mp3
 
 # Python cache
 __pycache__/
 *.py[cod]
 *$py.class
 
-# OS metadata
-.DS_Store
-
-# Ignore source data folders
+# Backend Data
 /data/
-/web/public/data/*
-!/web/data/tts_rules.json
-
-# Generated output
 /output/
 
 # Build artifacts
