--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@vitejs/plugin-basic-ssl": "^2.1.4",
     "gh-pages": "^6.3.0",
     "vite": "^7.3.1",
     "vite-plugin-pwa": "^1.2.0",
