fix: update launch URL to use HTTPS for secure connections

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
-            "url": "http://localhost:5173/gioibon/",
+            "url": "https://localhost:5173/gioibon/",
             "webRoot": "${workspaceFolder}/web"
         }
     ]
