--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "type": "commonjs",
   "devDependencies": {
     "@vitejs/plugin-basic-ssl": "^2.1.4",
+    "browser-sync": "^3.0.4",
     "gh-pages": "^6.3.0",
     "vite": "^7.3.1",
     "vite-plugin-pwa": "^1.2.0",
