--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ extensions = ["", "bash", "cfg", "cfg.py", "gitignore", "ini", "js", "json", "md
 
 format_extensions = ["py"]
 
-ignore = [".DS_Store", ".git", ".hg", ".pcode.toml", ".ruff_cache", ".svn", ".venv", "__pycache__", "venv", "/web/libs"]
+ignore = [".DS_Store", ".git", ".hg", ".pcode.toml", ".ruff_cache", ".svn", ".venv", "__pycache__", "venv", "/web/libs", "package-lock.json", "node_modules"]
 
 include = []
 
