--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Path: .gitignore
 # OS metadata
 .DS_Store
 
@@ -13,6 +14,7 @@ node_modules/
 /web/public/app-content/content.db
 /web/public/app-content/*_version.json
 /web/public/app-content/audio/
+/web/public/app-content/audio.zip
 
 # Python cache
 __pycache__/
